# coach-gpt-v2

./: .gitignore  CLAUDE.md  COACH-GUIDE.md  Procfile  agent-architecture.md  nixpacks.toml  pyproject.toml  requirements.txt  system-architecture.md
aws-cost-monitoring/: cloudformation-template.yaml  deploy.sh  lambda-weekly-report.py
coachgpt/: __init__.py  ai_client.py  cli.py  database.py  league_import.py  pipeline.py  season_import.py
coachgpt/agents/: __init__.py  analyst.py  ingestion.py  report_writer.py  researcher.py
coachgpt/web/: server.py
coachgpt/web/static/: index.html
game-data-files/: README.md
game-data-files/Fall 2025/season-stats/: Maryland Sting - Peay 2031 13U Fall 2025 Stats.csv
tests/: emmorton_game1_first_meeting.txt  emmorton_game2_5th_grade_first.txt  emmorton_game3_5th_grade_second.txt  emmorton_game4_kore_patrick.txt  emmorton_game5_playoff.txt  emmorton_game6_6th_grade_last.txt  real_emmorton_notes.txt  sample_game_1.txt  sample_game_2.txt
ui-redesign/: index.html  player-card-demo.html  tracker-demo.html
web/: UI_AUDIT.md  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(app)/: layout.tsx  page.tsx
web/app/(app)/account/: page.tsx
web/app/(app)/games/: page.tsx
web/app/(app)/guide/: page.tsx
web/app/(auth)/: layout.tsx
web/components/: agent-pipeline.tsx  app-sidebar.tsx  file-input-button.tsx  markdown.tsx  page-states.tsx  player-card.tsx  team-manage-sheet.tsx  theme-toggle.tsx  user-menu.tsx
web/lib/: api.ts  coach-note-template.ts  sse.ts  types.ts
(+5 files in other folders)
